--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 			</div>
 			<div class="preview">
 				<div class="preview__item" id="preview-1">
-					<button class="preview__item-back unbutton"><span>Back</span></button>
+					<a class="preview__item-back unbutton"><span>Back</span></a>
 					<div class="preview__item-imgwrap">
 						<div class="preview__item-img" style="background-image:url(img/full/1.jpg);"></div>
 					</div>
@@ -92,7 +92,7 @@
 					</div>
 				</div>
 				<div class="preview__item" id="preview-2">
-					<button class="preview__item-back unbutton"><span>Back</span></button>
+					<a class="preview__item-back unbutton"><span>Back</span></a>
 					<div class="preview__item-imgwrap">
 						<div class="preview__item-img" style="background-image:url(img/full/2.jpg);"></div>
 					</div>
@@ -109,7 +109,7 @@
 					</div>
 				</div>
 				<div class="preview__item" id="preview-3">
-					<button class="preview__item-back unbutton"><span>Back</span></button>
+					<a class="preview__item-back unbutton"><span>Back</span></a>
 					<div class="preview__item-imgwrap">
 						<div class="preview__item-img" style="background-image:url(img/full/3.jpg);"></div>
 					</div>
@@ -125,7 +125,7 @@
 					</div>
 				</div>
 				<div class="preview__item" id="preview-4">
-					<button class="preview__item-back unbutton"><span>Back</span></button>
+					<a class="preview__item-back unbutton"><span>Back</span></a>
 					<div class="preview__item-imgwrap">
 						<div class="preview__item-img" style="background-image:url(img/full/4.jpg);"></div>
 					</div>
@@ -141,7 +141,7 @@
 					</div>
 				</div>
 				<div class="preview__item" id="preview-5">
-					<button class="preview__item-back unbutton"><span>Back</span></button>
+					<a class="preview__item-back unbutton"><span>Back</span></a>
 					<div class="preview__item-imgwrap">
 						<div class="preview__item-img" style="background-image:url(img/full/5.jpg);"></div>
 					</div>
@@ -158,7 +158,7 @@
 					</div>
 				</div>
 				<div class="preview__item" id="preview-6">
-					<button class="preview__item-back unbutton"><span>Back</span></button>
+					<a class="preview__item-back unbutton"><span>Back</span></a>
 					<div class="preview__item-imgwrap">
 						<div class="preview__item-img" style="background-image:url(img/full/6.jpg);"></div>
 					</div>
@@ -173,7 +173,7 @@
 					</div>
 				</div>
 				<div class="preview__item" id="preview-7">
-					<button class="preview__item-back unbutton"><span>Back</span></button>
+					<a class="preview__item-back unbutton"><span>Back</span></a>
 					<div class="preview__item-imgwrap">
 						<div class="preview__item-img" style="background-image:url(img/full/7.jpg);"></div>
 					</div>
@@ -187,7 +187,7 @@
 					</div>
 				</div>
 				<div class="preview__item" id="preview-8">
-					<button class="preview__item-back unbutton"><span>Back</span></button>
+					<a class="preview__item-back unbutton"><span>Back</span></a>
 					<div class="preview__item-imgwrap">
 						<div class="preview__item-img" style="background-image:url(img/full/8.jpg);"></div>
 					</div>
@@ -204,7 +204,7 @@
 					</div>
 				</div>
 				<div class="preview__item" id="preview-9">
-					<button class="preview__item-back unbutton"><span>Back</span></button>
+					<a class="preview__item-back unbutton"><span>Back</span></a>
 					<div class="preview__item-imgwrap">
 						<div class="preview__item-img" style="background-image:url(img/full/9.jpg);"></div>
 					</div>
@@ -219,7 +219,7 @@
 					</div>
 				</div>
 				<div class="preview__item" id="preview-10">
-					<button class="preview__item-back unbutton"><span>Back</span></button>
+					<a class="preview__item-back unbutton"><span>Back</span></a>
 					<div class="preview__item-imgwrap">
 						<div class="preview__item-img" style="background-image:url(img/full/10.jpg);"></div>
 					</div>
